...
      appBar: AppBar(
        title: const Text('Pengaturan Profil'),
        backgroundColor: Colors.teal[900],
        foregroundColor: Colors.white,
        elevation: 0,
        leading: IconButton(
          key: const Key('IconBack'),
          icon: const Icon(Icons.arrow_back),
          onPressed: () {
            Navigator.pushReplacementNamed(context, '/beranda');
          },
        ),
      ),
...
                        ),
                      ),
                    ),
                    Positioned(
                      bottom: -30,
                      child: CircleAvatar(
                        key: const Key('AvatarProfile'),
                        radius: 55,
                        backgroundImage: _profileImage != null
                            ? FileImage(_profileImage!)
                            : (bytes.isNotEmpty
                                ? MemoryImage(bytes)
                                : const AssetImage('assets/img/icons8.png')
...
              style: const TextStyle(
                fontSize: 14,
                color: Colors.black87,
              ),
            ),
            IconButton(
              key: const Key('Edit'),
              icon: const Icon(Icons.edit, color: Colors.teal),
              onPressed: () => _showEditDialog(title, controller),
            ),
          ],
        ),
      ),
    );
  }

  void _showEditDialog(String title, TextEditingController controller) {
    final Map<String, int> dietMap = {
      'Diet Normal': 1,
      'Diet Berat Badan': 2,
      'Diet Sport': 3,
      'Diet Khusus': 4,
      'Diet 2 Nyawa': 5,
    };

    List<String> options = [];
    if (title == "Jenis Kelamin") {
      options = ['Laki-Laki', 'Perempuan'];
    } else if (title == "Program Diet") {
      options = dietMap.keys.toList();
    }

    String? selectedValue = controller.text.isNotEmpty
        ? controller.text
...
      context: context,
      builder: (BuildContext context) {
        return AlertDialog(
          title: Text('Edit $title'),
          content: options.isNotEmpty
              ? DropdownButtonFormField<String>(
                  key: const Key('DropDownButton'),
                  value: selectedValue,
                  items: options
                      .map((option) => DropdownMenuItem(
                            value: option,
                            child: Text(option),
                          ))
...
                  decoration: InputDecoration(
                    labelText: title,
                  ),
                ),
          actions: <Widget>[
            TextButton(
              key: const Key('Simpan'),
              onPressed: () async {
                if (title == "Program Diet" &&
                    selectedValue != null &&
                    dietMap.containsKey(selectedValue)) {
                  int dietValue = dietMap[selectedValue!]!;
                  updateProfileField(title, dietValue.toString());
...
