...

    showModalBottomSheet(
      context: context,
      isScrollControlled: true,
      builder: (BuildContext context) {
        return SizedBox(
          key: const Key('bottomSheetImage'),
          height: MediaQuery.of(context).size.height * 0.5, // 60% dari layar
          child: Padding(
            padding: const EdgeInsets.all(16.0),
            child: Column(
              children: [
                Center(
...
                          child: const Icon(Icons.camera_alt,
                              size: 40, color: Color.fromARGB(255, 68, 91, 75)),
                        ),
                      ),
                      const SizedBox(height: 16),
                      GestureDetector(
                        key: const Key('GestureDetectorGallery'),
                        onTap: () async {
                          // await _pickImageFromGallery();
                          await _showImagePickerModal();
                        },
                        child: Container(
                          decoration: BoxDecoration(
...
